--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -6,14 +6,39 @@ body{
     font-style: normal;
     background-color: #f3f1ff;
   }
+  nav{
+    height: 94px;
+    background-color:#562EFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+  nav a{
+    text-decoration: none;
+    color: white;
+    margin-right: 10px;
+  }
+  nav img{
+    height: 51px;
+    width: 40.42px;
+  }
+  .a{
+    height: 36px;
+    width: 54px;
+    color: white;
+  }
  main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
  }
   .container{
     background-color: white;
     width: 870px;
     padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
  }
  .top-players{
     margin-bottom: 30px;
@@ -42,6 +67,7 @@ body{
 }
 hr{
     border: 1px solid #d1d1d1;
+    margin-bottom: 27px;
 }
 .blog{
     display: flex;
@@ -64,4 +90,66 @@ hr{
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
+}
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+    align-items: center;
+}
+/* --------------
+  courses styles 
+  --------------*/
+  .courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+  }
+  .course{
+    
+  }
+  .course .course-banner img{
+    width: 224px;
+    height: 104px;
+  }
+  .course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .fa-star{
+    font-size: 12px;
+  }
+  .fa-star.filled{
+    color: #FFC014;
+  }
+  .fa-star.empty{
+    color: #AEAEAE;
+  }
+  .course-duration{
+    color: #FF4A60;
+    background-color: #FFE4E8;
+    border-radius: 14.69px;
+    padding: 5px;
+  }
+/* media queries */
+/* mobile devices */
+@media only screen and (max-width:688px) {
+    .container{
+        width:100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .player, .blog, .course{
+        flex-direction: column;
+    }
+}
+/* tablet devices */
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+    .container{width: 100%;}
+    .players, .courses{
+        grid-template-columns: repeat(2,1fr);
+    }
+    
 }
